Add first recipe - Greek Salad

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        
+        <h1>Recipes</h1>
+        <a href="./recipes/greeksalad.html">Greek Salad</a>
     </body>
 </html>
