--- a/recipes/greeksalad.html
+++ b/recipes/greeksalad.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Greek Salad</h1>
+        <img src="../img/greeksalad.jpeg" alt="Greek Salad">
     </body>
 </html>
