Filled out Greek Salad Recipe

--- a/recipes/greeksalad.html
+++ b/recipes/greeksalad.html
@@ -7,5 +7,27 @@
     <body>
         <h1>Greek Salad</h1>
         <img src="../img/greeksalad.jpeg" alt="Greek Salad">
+        <h2>Description</h2>
+        <p>Tasty nutritious Greek Salad made from Feta cheese, Olives, 
+            Cucumbers, Onions, Green Peppers, Tomatoes, Olive Oil, and Vinegar.
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Feta Cheese</li>
+            <li>Kalamata Olives</li>
+            <li>Cucumbers</li>
+            <li>Onions</li>
+            <li>Green Peppers</li>
+            <li>Tomatoes</li>
+            <li>Olive Oil</li>
+            <li>Vinegar</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Dice feta cheese, cucumbers, onions, peppers, and tomatoes.</li>
+            <li>Combine olive oil and vinegar.</li>
+            <li>Combine all ingredients, drizzle with vinegraette and toss.</li>
+            <li>Add grinded black peppers and crumbled feta to taste.</li>
+        </ol>
     </body>
 </html>
