Add return to index

--- a/recipes/greeksalad.html
+++ b/recipes/greeksalad.html
@@ -29,5 +29,6 @@
             <li>Combine all ingredients, drizzle with vinegraette and toss.</li>
             <li>Add grinded black peppers and crumbled feta to taste.</li>
         </ol>
+        <a href="../index.html">Return to Top</a>
     </body>
 </html>
