Adjust sizings of images

--- a/recipes/greeksalad.html
+++ b/recipes/greeksalad.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Greek Salad</h1>
-        <img src="../img/greeksalad.jpeg" alt="Greek Salad">
+        <img src="../img/greeksalad.jpg" alt="Greek Salad" width="800">
         <h2>Description</h2>
         <p>Tasty nutritious Greek Salad made from Feta cheese, Olives, 
             Cucumbers, Onions, Green Peppers, Tomatoes, Olive Oil, and Vinegar.
