--- a/recipes/lambkebabs.html
+++ b/recipes/lambkebabs.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lamb Kebabs</h1>
-        <img src="../img/lambkebab.jpg" alt="Lamb Kebabs">
+        <img src="../img/lambkebab.jpg" alt="Lamb Kebabs" width="800">
         <h2>Description</h2>
         <p>Tender and juicy Greek Lamb Kebabs, perfect for grilling and serving alongside Tzatziki sauce.
         </p>
