Add Spanakopita recipe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Recipes</h1>
+        <h1>Greek Recipes</h1>
         <a href="./recipes/greeksalad.html">Greek Salad</a>
+        <a href="./recipes/lambkebabs.html">Lamb Kebabs</a>
+        <a href="./recipes/spanakopita.html">Spanakopita</a>
     </body>
 </html>
