--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     </head>
     <body>
         <h1>Greek Recipes</h1>
-        <a href="./recipes/greeksalad.html">Greek Salad</a>
-        <a href="./recipes/lambkebabs.html">Lamb Kebabs</a>
-        <a href="./recipes/spanakopita.html">Spanakopita</a>
+        <img src="./img/greece.jpg" alt="Greece" width="800">
+        <h2>Enjoy the taste of Greek cooking!</h2>
+        <ul>
+            <li><a href="./recipes/greeksalad.html">Greek Salad</a></li>
+            <li><a href="./recipes/lambkebabs.html">Lamb Kebabs</a></li>
+            <li><a href="./recipes/spanakopita.html">Spanakopita</a></li>
+        </ul>
     </body>
 </html>
